--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,4 +20,10 @@ jobs:
         pip install -r requirements.txt
 
     - name: Run tests
-      run: pytest
+      run:pytest-covytest --cov=.
+
+    - name: Upload coverage report
+      uses: actions/upload-artifact@v2
+      with:
+        name: coverage
+        path: coverage.xml
