--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,4 @@
+correct my ci.yml file in .github/workflows:
 name: CI
 
 on:
@@ -18,12 +19,5 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-
     - name: Run tests
-      run:pytest-covytest --cov=.
-
-    - name: Upload coverage report
-      uses: actions/upload-artifact@v2
-      with:
-        name: coverage
-        path: coverage.xml
+      run: pytest
