--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,5 +18,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+
     - name: Run tests
-      run: pytest
+      env:
+        OUTPUT_FILE: ${{ github.workspace }}/output.txt
+      run: |
+        pytest
+        echo "::set-env name=MY_OUTPUT::$(cat ${OUTPUT_FILE})"
+        echo "MY_OUTPUT=${OUTPUT_FILE}" >> $GITHUB_ENV
