--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,12 +17,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install pytest
 
     - name: Run tests
-      env:
-        OUTPUT_FILE: ${{ github.workspace }}/output.txt
       run: |
         pytest
-        echo "::set-env name=MY_OUTPUT::$(cat ${OUTPUT_FILE})"
-        echo "MY_OUTPUT=${OUTPUT_FILE}" >> $GITHUB_ENV
