--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,3 +22,7 @@ jobs:
     - name: Run tests
       run: |
         pytest
+
+    - name: Set version environment variable
+      run: |
+        echo "MY_PACKAGE_VERSION=$(python setup.py --version)" >> $GITHUB_ENV
