--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,6 @@
-name: CI
+name: Python Compilation Check
 
-on:
-  push:
-    branches: [ main ]
+on: [push, pull_request]
 
 jobs:
   build:
@@ -11,16 +9,23 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
-      
+
     - name: Set up Python
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v2
       with:
         python-version: 3.x
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest
-  
+        pip install -r requirements.txt
 
+    - name: Check for syntax errors
+      run: python -m py_compile ./**/*.py
 
+    - name: Create an issue if syntax error exists
+      uses: peter-evans/create-issue-from-file@v2
+      with:
+        title: Python Compilation Error
+        content-filepath: syntax_errors.txt
+      if: failure()
