--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,29 +1,18 @@
-name: Python Compilation Check
+name: Python Lint
 
 on: [push, pull_request]
 
 jobs:
-  build:
+  lint:
     runs-on: ubuntu-latest
-
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
-
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: 3.x
-
+        python-version: '3.x'
     - name: Install dependencies
-      run: |
-
-        - name: Check for syntax errors
-          run: python -m py_compile ./**/*.py
-
-        - name: Create an issue if syntax error exists
-          uses: peter-evans/create-issue-from-file@v2
-          with:
-            title: Python Compilation Error
-            content-filepath: syntax_errors.txt
-          if: failure()
+      run: pip install flake8
+    - name: Run Flake8
+      run: flake8
