--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,4 +15,19 @@ jobs:
     - name: Install dependencies
       run: pip install flake8
     - name: Run Flake8
-      run: flake8
+      id: flake8
+      run: |
+        flake8
+        echo "::set-output name=summary::$(flake8 --count --select=E9,F63,F7,F82 --show-source --statistics)"
+    - name: Print summary
+      run: echo "${{ steps.flake8.outputs.summary }}"
+    - name: Update README
+      uses: actions/github-script@v4
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        script: |
+          const summary = '${{ steps.flake8.outputs.summary }}';
+          const fs = require('fs');
+          let readme = fs.readFileSync('./README.md', 'utf8');
+          readme = readme.replace(/(## Flake8 Summary\n\n)([\s\S]*?)(\n\n)/gm, `$1${summary}$3`);
+          fs.writeFileSync('./README.md', readme);
