--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,8 @@ jobs:
       run: |
         flake8
         echo "::set-output name=summary::$(flake8 --count --select=E9,F63,F7,F82 --show-source --statistics)"
+        - name: Check Flake8 summary
+          run: echo "Flake8 summary: '${{ steps.flake8.outputs.summary }}'"
     - name: Print summary
       run: echo "${{ steps.flake8.outputs.summary }}"
     - name: Update README
